--- a/index.html
+++ b/index.html
@@ -49,23 +49,23 @@
                     type="button"
                     class="btn btn-primary"
                     data-toggle="modal"
-                    data-target="#exampleModal"
+                    data-target="#ventanaModal"
                   >
                     Abrir video responsivo
                   </button>
               
                   <div
                     class="modal fade"
-                    id="exampleModal"
+                    id="ventanaModal"
                     tabindex="-1"
                     role="dialog"
-                    aria-labelledby="exampleModalLabel"
+                    aria-labelledby="ventanaModalLabel"
                     aria-hidden="true"
                   >
                     <div class="modal-dialog modal-xl" role="document">
                       <div class="modal-content">
                         <div class="modal-header">
-                          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                          <h5 class="modal-title" id="ventanaModalLabel">Video</h5>
                           <button
                             type="button"
                             class="close"
@@ -108,7 +108,8 @@
     <script src="js/popper.min.js" ></script>
     <script src="js/bootstrap.min.js" ></script>
     <script type="text/javascript">
-     
+  
+
     </script>
   </body>
 </html>
