Cambio en el title del documento HTML

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       
     </style>
 
-    <title>Hello, world!</title>
+    <title>Ventana modal con videos dinámicos</title>
   </head>
   <body>
 
