Funcíon Inicial JQuery

--- a/index.html
+++ b/index.html
@@ -108,8 +108,10 @@
     <script src="js/popper.min.js" ></script>
     <script src="js/bootstrap.min.js" ></script>
     <script type="text/javascript">
-  
+        $(function(){
 
+           
+        });    
     </script>
   </body>
 </html>
