--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h2 class="mt-5">Videos en ventana modal</h2>
         <div class="row mt-5">
             <div class="col">
-                <select class="custom-select custom-select-lg mb-3" id="catalogo-videos">
+                <select class="custom-select custom-select-lg mb-3" id="catalogoVideos">
                     <option selected>Seleccionar video</option>
                     <option value="https://www.youtube.com/embed/9TEXeADYfFI">Video 1</option>
                     <option value="https://www.youtube.com/embed/8TL_6t_8CPE">Video 2</option>
@@ -78,10 +78,10 @@
                         <div class="modal-body">
                           <div class="embed-responsive embed-responsive-4by3">
                             <iframe
-                              class="embed-responsive-item"
-                              src="https://www.youtube.com/embed/lXY0pGYJdaw"
-                              id="iframeVideo"
-                              allow="autoplay"
+                                id="iframeVideo"
+                                class="embed-responsive-item"
+                                src="https://www.youtube.com/embed/lXY0pGYJdaw"                              
+                                allow="autoplay"
                             ></iframe>
                           </div>
                         </div>
