--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                     <option value="https://www.youtube.com/embed/huyMTXeeD7I">Video 5</option>
                   </select>
               
-                  <button
+                  <button        
+                    id="botonVentanaModal"            
                     type="button"
                     class="btn btn-primary"
                     data-toggle="modal"
